tests/ui/resolve/impl-items-vis-unresolved.stderr
error[E0433]: cannot find module `super` in this scope
  --> $DIR/impl-items-vis-unresolved.rs:21:13
   |
LL |         pub(super) fn new() {}
   |             ^^^^^ can't use `super` on the crate root, there are no further modules to go "up" to

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
